Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/default/Eerr.out
Eerr.java:3:9: compiler.err.duplicate.annotation.member.value: x, A
1 error
