Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/default/Eerr.java
/* /nodynamiccopyright/ */

@A(x=1, x=2) // error: duplicate x
class E {
}
